--- a/PizzaOrder.Api/appsettings.json
+++ b/PizzaOrder.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PizzaOrderDB": "Server=PLUNEX;Database=PizzaOrderGraphQLDemo;ConnectRetryCount=0;Trusted_Connection=True;MultipleActiveResultSets=true",
+  }
 }
