Extended the configure services to reduce codes in the startup file. Added graphql server packages in the api layer. Configured the app startup file.

--- a/PizzaOrder.Api/appsettings.json
+++ b/PizzaOrder.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PizzaOrderDB": "Server=PLUNEX;Database=PizzaOrderGraphQLDemo;ConnectRetryCount=0;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PizzaOrderDB": "Server=PLUNEX;Database=PizzaOrderGraphQLDemo;ConnectRetryCount=0;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
