--- a/PizzaOrder.GraphQL/PizzaOrder.GraphQL.csproj
+++ b/PizzaOrder.GraphQL/PizzaOrder.GraphQL.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="GraphQL" Version="3.0.0-preview-1271" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PizzaOrder.Business\PizzaOrder.Business.csproj" />
+  </ItemGroup>
+
 </Project>
